footer color changd to light blue and spacing issue fixed again for image feeds" "

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@
 }
 
 .footer {
-  background-color: #F3F3F3;
+  background-color: #e5f1fc;
   position:fixed;
   bottom:0;
   width:100%;
