--- a/src/components/User/TeamChallengePhotos/TeamChallengePhotos.css
+++ b/src/components/User/TeamChallengePhotos/TeamChallengePhotos.css
@@ -11,7 +11,7 @@
 
 .teamFeedDescription {
   display: inline-block;
-  margin-left: 1.5rem;
+  margin-left: 2.5rem;
   margin-bottom: 5px;
   margin-top: 1rem;
 }
